# Embedded_VdcServiceTemplate

./: .gitignore  CMakeLists.txt  README.md  linker.ld
cmake/: arm-gcc-toolchain.cmake
example/: main.c
include/: VdcxxxServiceApi.h
src/: VdcxxxService.c
